# RobokasiV2_Host

./: .gitmodules  CMakeLists.txt  README.md  pulautin.xml
ext/: CMakeLists.txt
include/: CMakeLists.txt  SDLApp.hpp
include/gui/: CMakeLists.txt  Camera.hpp  DriveControl.hpp  GLTypes.hpp  Hello.hpp  Lines.hpp  Mesh.hpp  Puma560Model.hpp  Renderable.hpp  Renderer.hpp  SerialConfig.hpp  Shader.hpp  TransformedLines.hpp
include/hwio/: CMakeLists.txt  Hello.hpp  SerialProto.hpp
include/kinematics/: CMakeLists.txt  Chain.hpp  DHMatrix.hpp  Hello.hpp  Joint.hpp  MathTypes.hpp  Puma560.hpp  TypeUtils.hpp
res/shaders/: FS_Joint.glsl  FS_Lines.glsl  FS_Simple.glsl  VS_Joint.glsl  VS_Lines.glsl  VS_Simple.glsl
src/: CMakeLists.txt  SDLApp.cpp  main.cpp
src/app/: CMakeLists.txt  SDLApp.cpp  SDLApp.hpp  main.cpp
src/gui/: CMakeLists.txt  Camera.cpp  DriveControl.cpp  Hello.cpp  Lines.cpp  Mesh.cpp  Puma560Model.cpp  Renderable.cpp  Renderable.hpp  Renderer.cpp  SerialConfig.cpp  Shader.cpp  TransformedLines.cpp
src/hwio/: CMakeLists.txt  Hello.cpp  SerialProto.cpp
src/kinematics/: CMakeLists.txt  Chain.cpp  DHMatrix.cpp  Hello.cpp  Joint.cpp  Puma560.cpp
